[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "healthcare-diagnostics-helper"
version = "1.0.0"
description = "Medical image diagnostics helper that leverages PyTorch ResNet to analyze chest x-rays."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pytest>=7.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
